# HW2_8

part_1/: README.md  pyproject.toml  requirements.txt
part_1/part_1/: finder.py  json_load.py  main.py
part_2/: README.md  pyproject.toml  requirements.txt
part_2/part_2/: consumer.py  models.py  producer.py
