[tool.poetry]
name = "part-2"
version = "0.1.0"
description = ""
authors = ["ZhovtenkoA <127408550+ZhovtenkoA@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "part_2"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^19.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
